--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body style="margin:0; padding:0">
 	<canvas id="canvas" style="width:100%; height:100%">oups, not supported</canvas>
 	<script src="glMatrix_extracted.js"></script>
+	<script src="gfx.js"></script>
 	<script src="main.js"></script>
 </body>
