Sphere --> sphere.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<canvas id="canvas" style="width:100%; height:100%">oups, not supported</canvas>
 	<script src="glMatrix_extracted.js"></script>
 	<script src="gfx.js"></script>
+	<script src="sphere.js"></script>
 	<script src="lines.js"></script>
 	<script src="main.js"></script>
 </body>
