--- a/static/index.html
+++ b/static/index.html
@@ -5,5 +5,6 @@
 	<script src="gfx.js"></script>
 	<script src="sphere.js"></script>
 	<script src="lines.js"></script>
+	<script src="control.js"></script>
 	<script src="main.js"></script>
 </body>
